--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ twitter: '@dunittwitter'
 #Update all the sections by editing the files inside _data folder.
 
 # Tracker
-analytics: UA-83979019-1
+# analytics:
 
 # Build settings
 encoding: "utf-8"
