--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,18 +1,18 @@
 - skill:
   name: Java/EE
-  level: 98%
-- skill:
-  name: Javascript & jQuery
-  level: 98%
-- skill:
-  name: Angular
-  level: 98%
-- skill:
-  name: HTML5 & CSS
   level: 95%
 - skill:
-  name: Ruby on Rails
+  name: Linux
   level: 85%
 - skill:
-  name: Sketch & Photoshop
+  name: Python
+  level: 76%
+- skill:
+  name: SQL
   level: 60%
+- skill:
+  name: C/C++
+  level: 60%
+- skill:
+  name: Web
+  level: 55%
