--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,8 @@ style: styles-6
 name: Daniel SÃ¸rensen
 tagline: Software Developer
 pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
-summary: 'Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-You can <a href="#" target="_blank">download this free resume/CV template here</a>. Aenean
-commodo ligula eget dolor aenean massa. Cum sociis natoque penatibus et magnis dis parturient
-montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.'
+summary: 'I graduated in 2015 from Aalborg University with a master degree in Software Development. Since graduation I have been working at BAE Systems Applied Intelligence as a Java Backend developer.
+I am a hard working person that works good in a team and also individually. I am a flexible team player that’s not afraid to ask questions when needed. I am motivated by results and love to learn something new.'
 
 #sidebar links
 email: dunit@protonmail.com
