--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ style: styles-6
 name: Daniel Sørensen
 tagline: Software Developer
 pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
-summary: 'I graduated in 2015 from Aalborg University with a master degree in Software Development. Since graduation I have been working at BAE Systems Applied Intelligence as a Java Backend developer. I am a hard working person that works good in a team and also individually. I am a flexible team player that's not afraid to ask questions when needed. I am motivated by results and love to learn something new.'
+summary: 'I graduated in 2015 from Aalborg University with a master degree in Software Development. Since graduation I have been working at BAE Systems Applied Intelligence as a Java Backend developer. I am a hard working person that works good in a team and also individually. I am a flexible team player that is not afraid to ask questions when needed. I am motivated by results and love to learn new things.'
 
 #sidebar links
 email: dunit@protonmail.com
