--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,7 +6,7 @@
   tagline: "<br>
 As part of my masters thesis I had the chance to use an EEG (Electroencephalogram) reader and based my project on this device. An EEG reader is a device that can read brain waves when attached to the scalp of a person. I used this device in conjunction with machine learning and pattern recognition to be able to identify how arm movement could be identified in brain waves. The project was a proof of concept of how EEG readers potentially could be used to control robot arms by thoughts. The technologies used in this project were Java and Matlab combined with a huge amount of matrix manipulation."
 - project:
-  title: Cars - A voice controlled game targeted at children with autism
+  title: A voice controlled game targeted at children with autism
   #  link: "#"
   tagline: "<br>
 As a part of the GIRAF (Graphical Interface Resources for Autistic Folk) framework I developed the application Cars. Cars is a two dimensional side scrolling game where the player has to avoid obstacles using their voice to move the car around. 
