--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,13 +1,13 @@
 - intro:
-  description: "Significant projects"
+  description: ""
 - project:
   title: Reading and using brain signals in software
   #link: "#hook"
   tagline: "<br>
-As a part of my master thesis I had the chance to use an EEG (Electroencephalogram) reader and base my project around this device. An EEG reader is a device that can read brain waves when attached to the scalp of a person. I used this device in conjunction with machine learning and pattern recognition to be able to identify how arm movement could be identified in brain waves. The project was a proof of concept of how EEG readers potentially could be used to control robot arms by thoughts. The technologies used in this project was Java and Matlab."
+As a part of my master thesis I had the chance to use an EEG (Electroencephalogram) reader and base my project on this device. An EEG reader is a device that can read brain waves when attached to the scalp of a person. I used this device in conjunction with machine learning and pattern recognition to be able to identify how arm movement could be identified in brain waves. The project was a proof of concept of how EEG readers potentially could be used to control robot arms by thoughts. The technologies used in this project was Java and Matlab combined with a lot of matrix manipulation."
 - project:
   title: Cars - A voice controlled game targeted at children with autism
   #  link: "#"
   tagline: "<br>
 As a part of the GIRAF (Graphical Interface Resources for Autistic Folk) framework I developed the application Cars. Cars is a two dimensional side scrolling game where the player have to avoid obstacles using his/her voice to move the car around. 
-The purpose of Cars was to be a training tool for children with autism, who had trouble using and controlling their voice when communicating. It was developed in cooperation with caretakers and specialists in an agile iterative manner as many ideas had to be tried and proved before arriving at the end result. The game was developed for the Android platform using the microphone as the primary user input and drawing the graphics using OpenGL." 
+The purpose of Cars was to be a training tool for children with autism, who had trouble using and controlling their voice when speaking. It was developed in cooperation with caretakers and specialists in an agile iterative manner as many ideas had to be tried and proved before arriving at the end result. The game was developed for the Android platform using the microphone as the primary user input and drawing the graphics using OpenGL." 
