--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -9,5 +9,5 @@ As a part of my masters thesis I had the chance to use an EEG (Electroencephalog
   title: A voice controlled game targeted at children with autism
   #  link: "#"
   tagline: "<br>
-I was a small part of the GIRAF (Graphical Interface Resources for Autistic Folk) framework and developed the application Cars. Cars is a two dimensional side scrolling game where the player has to avoid obstacles using their voice to move the car around. 
+I was a part of the GIRAF (Graphical Interface Resources for Autistic Folk) framework and developed the application Cars. Cars is a two dimensional side scrolling game where the player has to avoid obstacles using their voice to move the car around. 
 The purpose of Cars was to be a training tool for children with autism, who had trouble using and controlling their voice when speaking. It was developed in cooperation with caretakers and specialists in an agile iterative manner, as many ideas had to be tried and proven before arriving at the end result. The game was developed for the Android platform using the microphone as the primary user input and by drawing the graphics using OpenGL." 
