CEH added to education

--- a/_data/educations.yml
+++ b/_data/educations.yml
@@ -1,3 +1,7 @@
+- education: 
+  degree: Certified Ethical Hacker (ECC_CEH9)
+  university: EC-Council 
+  time: 2018
 - education:
   degree: MSc in Computer Science
   university: Aalborg University
