minor typos and changed education title

--- a/_data/educations.yml
+++ b/_data/educations.yml
@@ -3,11 +3,11 @@
   university: EC-Council 
   time: 2018
 - education:
-  degree: MSc in Computer Science
+  degree: MSc in Engineering (Software)
   university: Aalborg University
   time: 2013 - 2015
 - education:
-  degree: BSc in Computer Science
+  degree: BSc in Engineering (Software)
   university: Aalborg University
   time: 2010 - 2013
 - education:
