Changed education - to be come certified

--- a/_data/educations.yml
+++ b/_data/educations.yml
@@ -1,5 +1,5 @@
 - education: 
-  degree: Certified Ethical Hacker (ECC_CEH9)
+  degree: Ethical Hacker (ECC_CEH9)
   university: EC-Council 
   time: 2018
 - education:
