--- a/_data/experiences.yml
+++ b/_data/experiences.yml
@@ -1,4 +1,9 @@
 ﻿- experience:
+  role: Full Stack Developer
+  time: 2018 - ?
+  company: Rohde & Schwarz, Aalborg
+  details: "Coming soon!"
+- experience:
   role: Java Backend Developer
   time: 2016 - 2018
   company: BAE Systems Applied Intelligence, Nørresundby
